<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>space_station_gnc</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yuyuqq@gmail.como">yuyuqq</maintainer>
  <license>Apache-2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <!--buildtool_depend>ament_python</buildtool_depend-->
  
  <build_depend>ament_index_cpp</build_depend>
  <exec_depend>ament_index_cpp</exec_depend>

  <!-- exec_depend>rclcpp</exec_depend -->
  <exec_depend>rclpy</exec_depend>
  <!-- exec_depend>std_msgs</exec_depend -->

  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>action_msgs</depend>
  <depend> builtin_interfaces</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- TF / messages / visualization -->
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- URDF parsing (exports CMake target urdf::urdf) -->
  <depend>urdf</depend>

  <!-- YAML support for thruster tables -->
  <depend>yaml-cpp</depend>

  <!-- OpenCV and SDL2 used by demo nodes -->
  <exec_depend>OpenCV</exec_depend>
  <exec_depend>SDL2</exec_depend>

  <!-- Eigen is found via CMake's Eigen3 package; declare the helper module if available -->
  <!-- Some distros export this as eigen3_cmake_module. Safe to add as a build dependency. -->
  <build_depend>eigen3_cmake_module</build_depend>
  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>

  <build_depend>eigen3</build_depend>
  <build_export_depend>eigen3</build_export_depend>
  <exec_depend>eigen3</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <!-- Tests also use YAML and URDF at runtime -->
  <test_depend>yaml-cpp</test_depend>
  <test_depend>urdf</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  
</package>
