<?xml version="1.0"?>
<package format="3">
  <name>space_station_utils</name>
  <version>0.0.1</version>
  <description>Utility functions shared across Space Station OS.</description>
  <maintainer email="todo@example.com">TODO Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
