<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ssos_core</name>
  <version>0.9.0</version>
  <description>SSOS core system manager — global state model, subsystem registration, fault aggregation</description>
  <maintainer email="spacestationos@spacedata.co.jp">Space Station OS</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>space_station_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>lifecycle_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>